--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.4",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "league/color-extractor": "^0.4.0",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0"
     },
