--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "intervention/image": "^3.11",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "league/color-extractor": "^0.4.0",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0"
+        "livewire/volt": "^1.0",
+        "php-ffmpeg/php-ffmpeg": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
